--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,13 +1,12 @@
 <%- include('header') -%>
 
-<h1>Undirskriftarlisti</h1>
+<h1 class="heading">Undirskriftarlisti</h1>
 
 <form class="sign" method="post" action="/">
-  <div
-    class="field<%= locals.isInvalid('name', errors) ? ' field--invalid' : '' %>"
-  >
-    <label for="name">Nafn*</label>
+  <div class="field">
+    <label class="field__label" for="name">Nafn*</label>
     <input
+      class="field__input<%= locals.isInvalid('name', errors) ? ' field--invalid' : '' %>"
       required
       type="text"
       name="name"
@@ -16,11 +15,10 @@
       class=""
     />
   </div>
-  <div
-    class="field<%= locals.isInvalid('nationalId', errors) ? ' field--invalid' : '' %>"
-  >
-    <label for="nationalId">Kennitala*</label>
+  <div class="field">
+    <label class="field__label" for="nationalId">Kennitala*</label>
     <input
+      class="field__input<%= locals.isInvalid('nationalId', errors) ? ' field--invalid' : '' %>"
       required
       type="text"
       name="nationalId"
@@ -29,51 +27,48 @@
       class=""
     />
   </div>
-  <div
-    class="field<%= locals.isInvalid('comment', errors) ? ' field--invalid' : '' %>"
-  >
-    <label for="comment">Athugasemd:</label>
-    <textarea name="comment" id="comment"><%= comment %></textarea>
+  <div class="field">
+    <label class="field__label" for="comment">Athugasemd:</label>
+    <textarea class="field__input<%= locals.isInvalid('comment', errors) ? ' field--invalid' : '' %>" name="comment" id="comment"><%= comment %></textarea>
   </div>
-  <div
-    class="field field--checkbox<%= locals.isInvalid('anonymous', errors) ? ' field--invalid' : false %>"
-  >
-    <input type="checkbox" name="anonymous" <%= anonymous === 'checked' ? true :
+  <div class="checkbox">
+    <input class="checkbox__box" type="checkbox" name="anonymous" <%= anonymous === 'checked' ? true :
     false %>>
-    <label for="anonymous">Ekki birta nafn á lista</label>
+    <label class="checkbox__label" for="anonymous">Ekki birta nafn á lista</label>
   </div>
 
   <% if (errors.length > 0) { %>
-  <h2>Villur við undirskrift:</h2>
-  <ul class="errors">
+  <h3 class="heading">Villur við undirskrift:</h3>
+  <ul class="error">
     <% errors.forEach((error) => { %>
-    <li class="error">
-      <label for="<%= error.param %>"><%= error.msg %></label>
+    <li class="error__item">
+      <label class="error__label" for="<%= error.param %>"><%= error.msg %></label>
     </li>
     <% }); %>
   </ul>
   <% } %>
 
-  <button>Skrifa undir</button>
+  <button class="sign__btn">Skrifa undir</button>
 </form>
 
-<h2>Undirskriftir</h2>
-
 <div class="signatures">
+
+<h2 class="heading">Undirskriftir</h2>
+
   <% if (list.length === 0) { %>
   <p>Engar undirskriftir.</p>
   <% } %> <% if (list.length !== 0) { %>
-  <table style="width: 100%">
-    <tr>
-      <th>Dags</th>
-      <th>Nafn</th>
-      <th>Athugasemd</th>
+  <table class="signatures__table">
+    <tr class="signatures__row">
+      <th class="signatures__heading">Dags</th>
+      <th class="signatures__heading">Nafn</th>
+      <th class="signatures__heading">Athugasemd</th>
     </tr>
     <% list.forEach((signature) => { %>
-    <tr class="signature">
-      <td><%= formatDate(signature.signed) %></td>
-      <td><%= formatName(signature) %></td>
-      <td><%= signature.comment %></td>
+    <tr class="signatures__row">
+      <td class="signatures__col"><%= formatDate(signature.signed) %></td>
+      <td class="signatures__col"><%= formatName(signature) %></td>
+      <td class="signatures__col"><%= signature.comment %></td>
     </tr>
     <% }); %>
   </table>
