--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,9 @@
-@import 'config';
+@import 'form';
 
 * {
+  background-color: #ffffec;
   border: 0;
-  margin: 0;
+  margin: auto;
   outline: none;
   padding: 0;
   text-decoration: none;
@@ -16,7 +17,7 @@
 
 html { /* stylelint-disable-line */
   box-sizing: border-box;
-  font-family: 'Roboto', 'Times New Roman', serif;
+  font-family: 'Times New Roman', serif;
   font-size: 16px;
   overflow-x: hidden;
   overflow-y: scroll;
@@ -24,5 +25,7 @@ html { /* stylelint-disable-line */
 
 main { /* stylelint-disable-line */
   margin: auto;
-  max-width: $max-width;
+  max-width: 1200px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
