--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,6 @@
 <%- include('header') -%>
 
-<h1><%= error.code === '23505' ? 'Gat ekki skráð!' : 'Villa kom upp!' %></h1>
+<h1 class="heading"><%= error.code === '23505' ? 'Gat ekki skráð!' : 'Villa kom upp!' %></h1>
 
 <% if (typeof error !== 'undefined') { %>
   <p><%= error.code === '23505' ? 'Hafðir þú skrifað undir áður?' : error %></p>
