forgot to close tag

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -3,7 +3,7 @@
 <h1 class="heading">Undirskriftarlisti - umsjón</h1>
 
 <div class="admin">
-  <p class="admin__info">Innskráður sem: <strong><%= user %></p>
+  <p class="admin__info">Innskráður sem: <strong><%= user %></strong></p>
   <a class="admin__logout" href="/logout">Útskrá</a>
 </div>
 
