--- a/views/form.ejs
+++ b/views/form.ejs
@@ -21,6 +21,7 @@
       required
       type="text"
       name="nationalId"
+      placeholder="000000-0000"
       id="nationalId"
       value="<%= nationalId %>"
     />
